--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "RFC 6750 Compatible Bearer Authentication for Laravel",
     "type": "library",
     "license": "MIT",
-    "keywords": ["api", "bearer", "rfc-6750", "oauth2", "konekt", "artkonekt"],
+    "keywords": ["api", "bearer", "rfc-6750", "oauth2", "konekt", "artkonekt", "laravel", "rest"],
     "support": {
         "source": "https://github.com/artkonekt/bearer-auth"
     },
@@ -14,10 +14,13 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.4|^8.0",
+        "lcobucci/jwt": "^4.0",
+        "laravel/framework": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^9.0",
+        "orchestra/testbench": "~4.0|~5.0|~6.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\BearerAuth\\": "src/" }
