--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel/framework": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^8.0|^9.0",
         "orchestra/testbench": "~4.0|~5.0|~6.0"
     },
     "autoload": {
