--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "lcobucci/jwt": "^4.0",
-        "laravel/framework": "^6.0|^7.0|^8.0"
+        "laravel/framework": "^6.0|^7.0|^8.0",
+        "konekt/concord": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
