--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,14 +9,12 @@ jobs:
     strategy:
       matrix:
         php: ['7.4', '8.0']
-        laravel: ['6.0', '6.20', '7.0', '7.30', '8.0', '8.38']
+        laravel: ['8.83', '9.0', '9.13']
         exclude:
-          - php: '8.0'
-            laravel: '6.0'
-          - php: '8.0'
-            laravel: '7.0'
-          - php: '8.0'
-            laravel: '8.0'
+          - php: '7.4'
+            laravel: '9.0'
+          - php: '7.4'
+            laravel: '9.13'
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
     steps:
       - name: Checkout
