--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     "require": {
         "php": "^7.4|^8.0",
         "lcobucci/jwt": "^4.0",
-        "laravel/framework": "^6.0|^7.0|^8.0",
+        "laravel/framework": "^8.83|^9.0",
         "konekt/concord": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
-        "orchestra/testbench": "~4.0|~5.0|~6.0"
+        "orchestra/testbench": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\BearerAuth\\": "src/" }
