--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "lcobucci/jwt": "^4.0",
-        "laravel/framework": "^8.83|^9.0",
-        "konekt/concord": "^1.5"
+        "laravel/framework": "^9.0|^10.0",
+        "konekt/concord": "^1.10.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0|^9.0",
-        "orchestra/testbench": "^6.0|^7.0"
+        "phpunit/phpunit": "^9.0|^10.0",
+        "orchestra/testbench": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\BearerAuth\\": "src/" }
