--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "description": "RFC 6750 Compatible Bearer Authentication for Laravel",
     "type": "library",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "keywords": ["api", "bearer", "rfc-6750", "oauth2", "konekt", "artkonekt", "laravel", "rest"],
     "support": {
         "source": "https://github.com/artkonekt/bearer-auth"
@@ -14,14 +16,14 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "lcobucci/jwt": "^4.0",
-        "laravel/framework": "^9.0|^10.0",
-        "konekt/concord": "^1.10.2"
+        "laravel/framework": "^10.0|^11.0",
+        "konekt/concord": "^1.13"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0|^10.0",
-        "orchestra/testbench": "^7.0|^8.0"
+        "phpunit/phpunit": "^10.0",
+        "orchestra/testbench": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\BearerAuth\\": "src/" }
