--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
     "require": {
         "php": "^8.1",
         "lcobucci/jwt": "^4.0",
-        "laravel/framework": "^10.0|^11.0",
+        "laravel/framework": "^10.0|^11.0|^12.0",
         "konekt/concord": "^1.13"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^8.0|^9.0|^12.0"
     },
     "autoload": {
         "psr-4": { "Konekt\\BearerAuth\\": "src/" }
