--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "konekt/concord": "^1.13"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.0|^11.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0"
     },
     "autoload": {
